<resources>
    <string name="app_name">Coffee Counter</string>

    <string name="title_closed_statements">Closed statements</string>
    <string name="title_statement">Statement</string>

    <string name="menu_add_user">Add user</string>
    <string name="menu_ingredients">Ingredients</string>
    <string name="menu_history">History</string>
    <string name="menu_change_user">Change user</string>


    <string name="user_name">User name</string>
    <string name="user_name_new">New user</string>
    <string name="user_is_active">Active user</string>
    <string name="save">Save</string>

    <string name="statement_total_price">Total price</string>
    <string name="statement_unit_price">Unit price</string>
    <string name="statement_total_count">Total count</string>
    <string name="statement_quantity">Quantity</string>
    <string name="statement_period">Period</string>
    <string name="statement_close">Close statement</string>

    <string name="statement_count">Count</string>
    <string name="statement_price">Price</string>

    <string name="statement_close_title">Close this statement?</string>
    <string name="statement_close_message">Robert, are you sure you wanna close this statement?
        This action could not be returned back.</string>


    <string name="ingredient_type">Type</string>
    <string name="ingredient_type_new">New ingredient</string>
    <string name="ingredient_name">Name</string>
    <string name="ingredient_price">Price</string>
    <string name="ingredient_quantity">Quantity</string>

    <string name="menu_add_ingredient_type">Add ingredient type</string>
    <string name="menu_change_ingredient">Change ingredient</string>
    <string name="title_activity_settings">Settings</string>

    <string name="btn_pay">Pay debt %1$.2f %2$s</string>

    <!-- Formats -->
    <string name="format_price">%1$.2f %2$s</string>
    <string name="format_countx">%1$.0f x </string>
    <string name="format_count">%1$.0f x </string>
    <string name="format_quantity">%1$.2f %2$s</string>
    <string name="format_date">%1$te. %1$tB %1$tY</string>
    <string name="format_period">%1$te. %1$tb %1$tY - %2$te. %2$tb %2$tY </string>

    <!-- Strings related to Settings -->
    <string name="menu_settings">Settings</string>
    <string name="currency">Currency</string>
    <string name="default_currency">CZK</string>

    <!-- Strings related to Shared Preferences -->
    <string name="key_currency">currency</string>
</resources>
