<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item android:id="@+id/menu_add_user"
          android:title="@string/menu_add_user"
          android:titleCondensed="string"
          android:icon="@drawable/ic_menu_add_user"
          compat:showAsAction="always"
        />
    <item android:id="@+id/menu_select_statement"
          android:title="@string/menu_ingredients"
          android:icon="@drawable/ic_menu_select_statement"
          compat:showAsAction="always"/>

    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:titleCondensed="@string/menu_settings"
        compat:showAsAction="never"
        />

</menu>