<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="32dp"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="89dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/tvIngredientTypeName"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ingredient_type"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvIngredientName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/ingredient_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvIngredientTypeName"
        app:layout_constraintLeft_toRightOf="@+id/tvIngredientTypeName"
        app:layout_constraintRight_toLeftOf="@+id/tvPeriod"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/tvPeriod"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/statement_period"
        app:layout_constraintRight_toLeftOf="@+id/tvPrice"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvIngredientTypeName" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="6dp"
        android:text="@string/ingredient_price"
        android:textAlignment="viewEnd"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvIngredientTypeName"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="6dp" />
</android.support.constraint.ConstraintLayout>