<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="32dp"
    android:orientation="horizontal"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tvCount"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/user_name" />


    <TextView
        android:id="@+id/tvCount"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"
        android:text="@string/statement_count"
        android:textAlignment="viewEnd"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvUserName"
        app:layout_constraintRight_toLeftOf="@+id/tvPrice" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="32dp"
        android:text="@string/statement_price"
        android:textAlignment="viewEnd"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvCount"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>