<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.standadev.coffeecounter.activities.ChangeIngredientActivity">

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onSaveButtonClick"
        android:text="@string/save"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIngredientPrice" />

    <EditText
        android:id="@+id/etIngredientType"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:duplicateParentState="false"
        android:ems="10"
        android:enabled="false"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toLeftOf="@+id/btnUnlock"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:text="@string/ingredient_type"
        app:layout_constraintBaseline_toBaselineOf="@+id/etIngredientType"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:text="@string/ingredient_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/etIngredientName"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        app:layout_constraintRight_toLeftOf="@+id/guideline" />

    <EditText
        android:id="@+id/etIngredientName"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIngredientType" />

    <EditText
        android:id="@+id/etIngredientPrice"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIngredientName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:text="@string/ingredient_price"
        app:layout_constraintBaseline_toBaselineOf="@+id/etIngredientPrice"
        app:layout_constraintLeft_toLeftOf="@+id/textView3"
        app:layout_constraintRight_toLeftOf="@+id/guideline" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="99dp"
        android:orientation="vertical" />

    <ImageButton
        android:id="@+id/btnUnlock"
        android:layout_width="56dp"
        android:layout_height="52dp"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:onClick="onUnlockButtonClick"
        app:layout_constraintBottom_toBottomOf="@+id/etIngredientType"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etIngredientType"
        app:layout_constraintVertical_bias="0.545"
        app:srcCompat="@drawable/ic_unlock" />
</android.support.constraint.ConstraintLayout>
